k8s/infrastructure/ingress-dashboards.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure # Port 443
  routes:
    - match: Host(`argocd.shasame.fr`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          serversTransport: skip-tls-verify
  tls:
    certResolver: default
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.shasame.fr`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: auth-forward
          namespace: auth
